--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       margin: 0;
     }
         div {
-       position: sticky;
+       position: relative;
        width: 100%;
        background-position: center;
        z-index: 1;
