--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
       </div>
   </body>
 
-</html>
+ <!-- </html>
 =======
 <h1>hi</h1>
 
@@ -146,4 +146,4 @@ function myFunction() {
   <br>
   <input id="email" type="text" value="Mouse">
   <br>
-</form>
+</form> -->
